--- a/cLogin.html
+++ b/cLogin.html
@@ -110,7 +110,7 @@
                   </div>
                 </div>
                 <!-- Submit button -->
-                <button type="submit" class="btn btn-primary btn-block mb-4 w-100">Iniciar sesión</button>
+                <a href="amotoTribu.html" class="btn btn-primary btn-block mb-4 w-100">Iniciar sesión</a>
                 <!-- Register buttons -->
                 <div class="text-center">
                     <p>¿No tienes cuenta? 
